// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateStandardLineChartOptions should generate standard line chart options 1`] = `
{
  "accessibility": {
    "description": "accessibility",
    "enabled": false,
  },
  "chart": {
    "animation": false,
    "height": 500,
    "spacingBottom": 50,
    "spacingTop": 20,
    "type": "line",
  },
  "credits": {
    "enabled": false,
  },
  "legend": {
    "align": "left",
    "itemStyle": {
      "fontSize": "16px",
    },
    "margin": 30,
    "verticalAlign": "top",
  },
  "plotOptions": {
    "series": {
      "animation": false,
    },
  },
  "series": [
    {
      "color": "#F46A25",
      "custom": {
        "areaCode": "A1425",
      },
      "data": [
        [
          2004,
          703.420759,
        ],
        [
          2006,
          278.29134,
        ],
      ],
      "marker": {
        "symbol": "arc",
      },
      "name": "North FooBar",
      "type": "line",
    },
  ],
  "title": {
    "style": {
      "display": "none",
    },
  },
  "tooltip": {
    "formatter": [Function],
    "headerFormat": "",
    "useHTML": true,
  },
  "xAxis": {
    "allowDecimals": false,
    "labels": {
      "formatter": undefined,
      "style": {
        "fontSize": 16,
      },
    },
    "tickLength": 0,
    "title": {
      "margin": 20,
      "style": {
        "fontSize": 19,
      },
      "text": "xAxis",
    },
  },
  "yAxis": {
    "labels": {
      "formatter": [Function],
      "style": {
        "fontSize": 16,
      },
    },
    "minorTickInterval": "auto",
    "minorTicksPerMajor": 2,
    "title": {
      "margin": 20,
      "style": {
        "fontSize": 19,
      },
      "text": "yAxis",
    },
  },
}
`;

exports[`generateStandardLineChartOptions should generate standard line chart options with benchmark and group data 1`] = `
{
  "accessibility": {
    "description": "accessibility",
    "enabled": false,
  },
  "chart": {
    "animation": false,
    "height": 500,
    "spacingBottom": 50,
    "spacingTop": 20,
    "type": "line",
  },
  "credits": {
    "enabled": false,
  },
  "legend": {
    "align": "left",
    "itemStyle": {
      "fontSize": "16px",
    },
    "margin": 30,
    "verticalAlign": "top",
  },
  "plotOptions": {
    "series": {
      "animation": false,
    },
  },
  "series": [
    {
      "color": "#505A5F",
      "custom": {
        "areaCode": "E92000001",
      },
      "data": [
        [
          2004,
          703.420759,
        ],
        [
          2006,
          278.29134,
        ],
      ],
      "marker": {
        "symbol": "circle",
      },
      "name": "Benchmark: England",
      "type": "line",
    },
    {
      "color": "#28A197",
      "custom": {
        "areaCode": "P001",
      },
      "data": [
        [
          2004,
          301,
        ],
        [
          2006,
          300,
        ],
      ],
      "marker": {
        "symbol": "diamond",
      },
      "name": "Group: Parent",
      "type": "line",
    },
    {
      "color": "#F46A25",
      "custom": {
        "areaCode": "A1425",
      },
      "data": [
        [
          2004,
          703.420759,
        ],
        [
          2006,
          278.29134,
        ],
      ],
      "marker": {
        "symbol": "arc",
      },
      "name": "North FooBar",
      "type": "line",
    },
  ],
  "title": {
    "style": {
      "display": "none",
    },
  },
  "tooltip": {
    "formatter": [Function],
    "headerFormat": "",
    "useHTML": true,
  },
  "xAxis": {
    "allowDecimals": false,
    "labels": {
      "formatter": undefined,
      "style": {
        "fontSize": 16,
      },
    },
    "tickLength": 0,
    "title": {
      "margin": 20,
      "style": {
        "fontSize": 19,
      },
      "text": "xAxis",
    },
  },
  "yAxis": {
    "labels": {
      "formatter": [Function],
      "style": {
        "fontSize": 16,
      },
    },
    "minorTickInterval": "auto",
    "minorTicksPerMajor": 2,
    "title": {
      "margin": 20,
      "style": {
        "fontSize": 19,
      },
      "text": "yAxis",
    },
  },
}
`;

exports[`generateStandardLineChartOptions should not include benchmark or group years before or after the areas have data 1`] = `
{
  "accessibility": {
    "description": "accessibility",
    "enabled": false,
  },
  "chart": {
    "animation": false,
    "height": 500,
    "spacingBottom": 50,
    "spacingTop": 20,
    "type": "line",
  },
  "credits": {
    "enabled": false,
  },
  "legend": {
    "align": "left",
    "itemStyle": {
      "fontSize": "16px",
    },
    "margin": 30,
    "verticalAlign": "top",
  },
  "plotOptions": {
    "series": {
      "animation": false,
    },
  },
  "series": [
    {
      "color": "#505A5F",
      "custom": {
        "areaCode": "E92000001",
      },
      "data": [
        [
          2004,
          703.420759,
        ],
        [
          2006,
          278.29134,
        ],
      ],
      "marker": {
        "symbol": "circle",
      },
      "name": "Benchmark: England",
      "type": "line",
    },
    {
      "color": "#28A197",
      "custom": {
        "areaCode": "P001",
      },
      "data": [
        [
          2004,
          301,
        ],
        [
          2006,
          300,
        ],
      ],
      "marker": {
        "symbol": "diamond",
      },
      "name": "Group: Parent",
      "type": "line",
    },
    {
      "color": "#F46A25",
      "custom": {
        "areaCode": "A1425",
      },
      "data": [
        [
          2004,
          703.420759,
        ],
        [
          2006,
          278.29134,
        ],
      ],
      "marker": {
        "symbol": "arc",
      },
      "name": "North FooBar",
      "type": "line",
    },
  ],
  "title": {
    "style": {
      "display": "none",
    },
  },
  "tooltip": {
    "formatter": [Function],
    "headerFormat": "",
    "useHTML": true,
  },
  "xAxis": {
    "allowDecimals": false,
    "labels": {
      "formatter": undefined,
      "style": {
        "fontSize": 16,
      },
    },
    "tickLength": 0,
    "title": {
      "margin": 20,
      "style": {
        "fontSize": 19,
      },
      "text": "xAxis",
    },
  },
  "yAxis": {
    "labels": {
      "formatter": [Function],
      "style": {
        "fontSize": 16,
      },
    },
    "minorTickInterval": "auto",
    "minorTicksPerMajor": 2,
    "title": {
      "margin": 20,
      "style": {
        "fontSize": 19,
      },
      "text": "yAxis",
    },
  },
}
`;
